<resources>
    <string name="app_name">EnouvoMobileTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemContentString">~~ hiring for a UX Lead in Sydney - who should I talk to?</string>
    <string name="itemTimeString"><font color="#687684">%s · %s · </font></string>
    <string name="errorEmailEmpty">Email is empty!</string>
    <string name="errorEmailNotValid">Email is not valid!</string>
    <string name="errorPasswordEmpty">Password is empty!</string>
    <string name="errorPasswordNotValid">Password is not valid!</string>
    <string name="credentialIncorrect">Incorrect email address or password</string>
    <string name="errorNameEmpty">Name is empty!</string>
    <string name="emailAlreadyUse">This email is already in use</string>
    <string name="signupSuccess">Sign up successful</string>
    <string name="isFav">isFavourite</string>
    <string name="tweet">Tweet</string>
    <string name="favourite">Favourite</string>
    <string name="mainExam1">Exam 1</string>
    <string name="mainExam2">Exam 2</string>
    <string name="mainExam3">Exam 3</string>
    <string name="mainTitle">Please Log into your existing account</string>
    <string name="mainWelcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="yourEmail">Your Email</string>
    <string name="templateEmail">tuan@gmail.com</string>
    <string name="yourPassword">Your Password</string>
    <string name="templatePassword">Tuan@123</string>
    <string name="signUp">Sign up?</string>
    <string name="forgotYourPassword">Forgot your password</string>
    <string name="back">Back</string>
    <string name="twitterWebApp">Twitter Web App</string>
    <string name="yourName">Your Name</string>
    <string name="pleaseInputInfomation">Please input infomation</string>
    <string name="moveToLogin">Move to login</string>

</resources>