<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.exam1.auth.signup.fragments.SignupFragment">

    <TextView
        android:id="@+id/tv_err_email"
        style="@style/CustomValidateWarning"
        app:layout_constraintEnd_toEndOf="@+id/rl_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rl_email"
        app:layout_constraintTop_toBottomOf="@+id/rl_email" />

    <TextView
        android:id="@+id/tv_err_name"
        style="@style/CustomValidateWarning"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/yourEmail"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_err_name"
        tools:textSize="14dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_button_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_pw">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_email"
        style="@style/CustomInputText"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85"
            android:importantForAutofill="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="74dp"
        android:text="@string/yourName"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/yourPassword"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_err_email" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_pw"
        style="@style/CustomInputText"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/edt_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85"
            android:importantForAutofill="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/pleaseInputInfomation"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/moveToLogin"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_marginTop="21dp"
        style="@style/CustomInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_err_pw"
        style="@style/CustomValidateWarning"
        app:layout_constraintEnd_toEndOf="@+id/rl_pw"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rl_pw"
        app:layout_constraintTop_toBottomOf="@+id/rl_pw" />


</androidx.constraintlayout.widget.ConstraintLayout>